# containerd-shim-spinkube

./: dev.md
containerd-shim-spin/: Cargo.toml
containerd-shim-spin/src/: engine.rs
tests/: Cargo.toml
