[package]
name = "containerd-shim-spin-v2"
version = "0.10.0"
authors = ["DeisLabs Engineering Team"]
edition = "2021"
repository = 'https://github.com/spinkube/containerd-shim-spin'
license = "Apache-2.0"
homepage = 'https://github.com/spinkube/containerd-shim-spin'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/containerd/runwasi", rev = "c768e5b0919ca02903a301bf82a390489437dabe" }
containerd-shim = "0.6.0"
log = "0.4"
spin-app = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-core = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-trigger = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-trigger-http = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
# spin-trigger-redis = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
# trigger-sqs = { git = "https://github.com/fermyon/spin-trigger-sqs", tag = "v0.6.0" }
spin-manifest = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-loader = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-oci = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-common = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
spin-telemetry = { git = "https://github.com/calebschoepp/spin", branch = "better-observability" }
wasmtime = "18.0.1"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.3" }
futures = "0.3"
ctrlc = { version = "3.2", features = ["termination"] }

